<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Beigesoft™ EIS</string>
  <string name="expPubExch">Export exchange public key</string>
  <string name="impPubExch">Import exchange public key</string>
  <string name="ImpSqlite">Import SQLITE DB</string>
  <string name="expSqlt">Export SQLITE DB</string>
  <string name="impEnSqlt">Import encrypted SQLITE DB</string>
  <string name="impEnSqltSg">Import encrypted SQLITE DB\'s signature</string>
  <string name="impEnSqltSk">Import encrypted SQLITE DB\'s SK</string>
  <string name="impEnSqltSks">Import encrypted SQLITE DB\'s SK\'s signature</string>
  <string name="expEnSqlt">Export encrypted SQLITE DB</string>
  <string name="expEnSqltSg">Export encrypted SQLITE DB\'s signature</string>
  <string name="expEnSqltSk">Export encrypted SQLITE DB\'s SK</string>
  <string name="expEnSqltSks">Export encrypted SQLITE DB\'s SK\'s signature</string>
  <string name="fileImpd">File has been imported</string>
  <string name="alert_dialog_ok">OK</string>
  <string name="permGr">Permissions granted</string>
  <string name="permNoGr">Permissions aren\'t granted</string>
  <string name="permAlGr">Permissions already granted</string>
  <string name="permTi">Permissions</string>
  <string name="perm">You need permission internet to run this application and to import data from cloud version! You also need permission foreground service to run server in background!</string>
  <string name="expCaCe">Export A-Jetty CA certificat</string>
  <string name="expLog">Export log file</string>
  <string name="expEnLog">Export encrypted log file</string>
  <string name="port">Port:</string>
  <string name="start">Start</string>
  <string name="stop">Stop</string>
  <string name="starting">Starting</string>
  <string name="stopping">Stopping</string>
  <string name="ksPassw">Password:</string>
  <string name="ksPasswRep">Confirm password:</string>
  <string name="ajettyNumber">A-Jetty number:</string>
  <string name="passwNoMatch">The passwords do not match!</string>
  <string name="EnterAjettyNumber">Please enter A-Jetty number!</string>
  <string name="ajettycacopied">A-Jetty CA certificat ajetty-ca[A-Jetty#].peme and file exchanger public key ajetty-file-exch[A-Jetty#].kpub has been created.</string>
  <string name="passwordWrong">Wrong password!</string>
  <string name="enterPassw">Please enter password!</string>
  <string name="sendingStart">Sending request to start server, please wait&#8230;</string>
  <string name="cantStart">Can not start A-Jetty!</string>
  <string name="cantInitCrypto">Can not initialize crypto service!</string>
  <string name="cantCrDir">Can not create ks directory</string>
  <string name="ksDirRules">KS directory must contains only ks file!!!</string>
  <string name="wasErr">There was errors!</string>
  <string name="newFlCop">New version of WEB static files has been copied!</string>
  <string name="dirCrFlCop">Beige Accounting directory has been  successfully created and WEB static files has been copied!</string>
  <string name="srvStrt">A-Jetty has been started.</string>
  <string name="privTitle">Privacy policy</string>
  <string name="agree">I accept this privacy policy</string>
  <string name="urlPrv">Privacy policy page</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="errStartLog">Can\'t create starter file log</string>
  <string name="privAll">Beigesoft™ EIS stores your information in database files. Log files may also contain private information.
When you are going to send Log files to a third party (for example, to the programmer serving this software), then you need to delete all private information from these files.
This application is based on the built-in private A-Jetty Web server. This private Web Server is not accessible outside of your Android device.
This application requires authorization with a strong password (you create a password yourself, and the software controls its reliability). This application allows 6 failed authorization attempts. Access will be blocked for 15 minutes in case of 6 unsuccessful login attempts. You need to periodically check the logSec.log file for authorization information.
This application uses modern encryption of data passing from the server to the browser (HTTPS connection) and exchanged files (databases and log files).
Your information (SQLite database), logStd.log, logSec.log, keystore are in the place that is inaccessible to other software. If you forget the keystore or the application password, then you will lose your information. Therefore, you need to periodically make  a copy of the database into Google Drive. In addition, you can use encryption for the database, but this is appropriate when you send an encrypted database into Beigesoft™ EIS that is installed on a computer in protected from light harmful software way, or for sharing the database between Android devices via the shared storage (not via Google Drive). Never use the shared storage for exporting or importing non-encrypted private information.
This application has no direct  access to your files on Google Drive, that is it can not list or read them. It only asks Google Drive Application for sending or receiving a file interactively, that is with user (your) confirmation.
PDF reports will be downloaded into the Downloads shared folder, so avoid installing unnecessary applications that require access to the storage. When you connect your Android device to a computer in file sharing mode, then any application on the computer will have direct access to these files. You need to delete these PDF files from the shared storage after viewing them.
When all Android applications will be forced to use the "SCOPED STORAGE", then they will have only interactive access to files in the Downloads folder.
When your browser will pass a PDF file to a PDF viewer via the secure transport (not via shared Download folder), then all other applications will have no access to your PDF files.
This application has no direct access to files on the shared storage. You can use the shared storage (just choose it instead of Google Drive) for exporting and importing non-private information (such as ajetty-ca#.pem) or encrypted private one.
You also need to set a screen lock, such as a PIN code.
You must accept this policy in order to work with this application.
  </string>
</resources>
