<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="org.beigesoft.accandr.Bsa" >

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
      android:labelFor="@+id/etAjettyIn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ajettyNumber" />

    <EditText
      android:id="@+id/etAjettyIn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="number" />

    <TextView
      android:labelFor="@+id/etKsPassw"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ksPassw" />

    <EditText
      android:id="@+id/etKsPassw"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword" />

    <TextView
      android:labelFor="@+id/etKsPasswRep"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ksPasswRep" />

    <EditText
      android:id="@+id/etKsPasswRep"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="textPassword" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/port" />
      
      <Spinner
        android:id="@+id/cmbPort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
      android:id="@+id/btnPrivacy"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/privTitle" />

    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/btnStop"
      android:text="@string/stop" />

    <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/btnStart"
      android:text="@string/start" />

    <Button
      android:id="@+id/btnStartBrowser"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btnExpCaCe"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expCaCe" />

    <Button
      android:id="@+id/btnExpPubExch"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expPubExch" />

    <Spinner
      android:id="@+id/cmbExpLog"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btnExpLog"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expLog" />

    <Spinner
      android:id="@+id/cmbExpEnLog"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btnExpEnLog"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expEnLog" />

    <Spinner
      android:id="@+id/cmbExpSqlt"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btnExpSqlt"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expSqlt" />

    <Spinner
      android:id="@+id/cmbExpEnSqlt"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btnExpEnSqlt"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expEnSqlt" />

    <Spinner
      android:id="@+id/cmbExpEnSqltSg"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btnExpEnSqltSg"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expEnSqltSg" />

    <Spinner
      android:id="@+id/cmbExpEnSqltSk"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btnExpEnSqltSk"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expEnSqltSk" />

    <Spinner
      android:id="@+id/cmbExpEnSqltSks"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btnExpEnSqltSks"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/expEnSqltSks" />

    <Button
      android:id="@+id/btnImpPubExch"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/impPubExch" />

    <Button
      android:id="@+id/btnImpSqlite"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ImpSqlite" />

    <Button
      android:id="@+id/btnImpEnSqlt"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/impEnSqlt" />

    <Button
      android:id="@+id/btnImpEnSqltSg"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/impEnSqltSg" />

    <Button
      android:id="@+id/btnImpEnSqltSk"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/impEnSqltSk" />

    <Button
      android:id="@+id/btnImpEnSqltSks"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/impEnSqltSks" />

    <Button
      android:id="@+id/btnPerm"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/permTi" />

  </LinearLayout>

</ScrollView>
