<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
        
    <TextView android:id="@+id/tvPriv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/privAll"  />

    <Button android:id="@+id/btUrlPrv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/urlPrv"/>

    <CheckBox
      android:id="@+id/chbAcp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/agree" />

  </LinearLayout>

</ScrollView>
